[package]
name = "nitro_sniper"
version = "1.0.0"
edition = "2021"
authors = ["https://github.com/Natslol/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
serenity = { git = "https://github.com/Natslol/serenity/", default-features = false,  features = [ "client", "gateway", "model", "rustls_backend"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.14", features = ["json"] }
colorful = "0.2.2"
chrono = "0.4.23"

[profile.release]
opt-level = 3
codegen-units = 1
debug = false
debug-assertions = false
lto = "fat"
rpath = false
panic = "abort"


